Fixed an visibility and design bug where the answer boxes were different in height. Also centered content

--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -30,6 +30,13 @@ h3{
     margin-bottom: 50px;
 }
 
+.answer-panel{
+    position: relative;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+    text-align: center;
+}
+
 .answer-switcher > .btn-group > .btn {
     border: 1px solid #ccc;
 }
